--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <meta charest="utf-8"/>
         <meta name="viewport"content="width=devce-width">
         <title>浪與不浪</title>
-        <link href="home.css" rel="stylesheet" type="text/css">
+        <link href="Home/.vscode/home.css" rel="stylesheet" type="text/css">
         <script src="https://kit.fontawesome.com/26192343f6.js" crossorigin="anonymous"></script>
         <link href="java">
     </head>
