--- a/html/med.html
+++ b/html/med.html
@@ -58,27 +58,27 @@
                 <div class="box1">
                     <div class="meat">
                         <div class="circle1">
-                            <div class="photo1"><a href="/html/meat.html"><img src="/1x/meat.png"></a></div>
+                            <div class="photo1"><a href="/html/meat.html"><img src="/1x/4.png"></a></div>
                         </div>
-                        <div class="word1"><br>『生食』的好處</br>＆該注意的什麼？</div>
+                        <div class="word1"><br>狗狗為何要結紮?</br>結紮對身體更好?</div>
                     </div>
                     <div class="fresh">
                         <div class="circle2">
-                            <div class="photo2"><a href="/html/fresh.html"><img src="/1x/fresh.png"></a></div>
+                            <div class="photo2"><a href="/html/fresh.html"><img src="/1x/5.png"></a></div>
                         </div>
-                        <div class="word2"><br>『鮮食』的好處</br>＆需考量四重點！</div>
+                        <div class="word2"><br>毛孩洗了澡</br>還是臭呼呼?</div>
                     </div>
                     <div class="food">
                         <div class="circle3">
-                            <div class="photo3"><a href="/html/food.html"><img src="/1x/food.png"></a></div>
+                            <div class="photo3"><a href="/html/food.html"><img src="/1x/6.png"></a></div>
                         </div>
-                        <div class="word3"><br>『飼料』的優點</br>＆挑選優質飼料</div>
+                        <div class="word3"><br>狗狗常見</br>皮膚病種類</div>
                     </div>
                     <div class="snack">
                         <div class="circle4">
-                            <div class="photo4"><a href="/html/snack.html"><img src="/1x/snack.png"></a></div>
+                            <div class="photo4"><a href="/html/snack.html"><img src="/1x/8.png"></a></div>
                         </div>
-                        <div class="word4"><br>『零食』挑選撇步</br>＆注意事項</div>
+                        <div class="word4"><br>狗狗緊急CPR</br>關鍵時機?</div>
                     </div>
                 </div>
             </div>
