--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body>
         <div class="videopage" id="video">
             <div class="video">
-                <iframe width="900" height="540" src="https://www.youtube.com/embed/z2xIiRJVrSA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/z2xIiRJVrSA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               
             </div>
             <div class="intor">
                 <br>我們希望通過紀錄片去讓大家更能了解到狗園照顧狗的辛苦以及他們最真實的環境是多麼的艱辛，
