--- a/html/page2.html
+++ b/html/page2.html
@@ -54,8 +54,7 @@
                     <div class="ret"><div class="fword">飲食</div></div>
                 </div> 
             </div>
-            <div class="KW1" id="KW1">
-                <div class="box1">
+            <div class="box1" id="KW1">
                     <div class="meat">
                         <div class="circle1">
                             <div class="photo1"><a href="/html/meat.html"><img src="/1x/meat.png"></a></div>
@@ -80,7 +79,6 @@
                         </div>
                         <div class="word4"><br>『零食』挑選撇步</br>＆注意事項</div>
                     </div>
-                </div>
             </div>
         </div>
     </body>
