--- a/html/money.html
+++ b/html/money.html
@@ -86,7 +86,7 @@
                 <div class="article2">
                     <h1>二、養狗花費之伙食開銷</h1>
                     <br><h2>伙食開銷依據狗狗的體型、食量及飼料類別（特殊飼料、飼料品牌、鮮食...）而影響以下約略計算每月所需之費用。</h2></br>
-                    <table>
+                    <table class="sheet2">
                         <tr>
                             <td></td>
                             <td>飼料</td>
