--- a/html/meat.html
+++ b/html/meat.html
@@ -14,7 +14,7 @@
             <br><h1>生食是什麼？狗狗生食前應該注意的幾件事</h1></br>
             <br><h2><br>要討論狗狗飲食前，我們要先來談談許多人會混淆的「鮮食」與「生食」之間的差異，</span><span style="color:rgb(252, 66, 66)">兩者都是屬於原型食物</span>，最大的辨認方式<span style="color:rgb(252, 66, 66)">是否亨煮過</span>。</br><br> 生食成份單純，多以肉類為主，對於狗狗的身體構造來說是非常能夠適應的，而且也能為狗狗帶來以下幾點好處：</br></h2></br>
             <div class="part1">
-                <h1><span style="color:rgb(31, 129, 241)">(1) 促進腸胃健康：</span><span style="color:rgb(252, 66, 66)">澱粉-蛋白質-蔬果 = 1-1-1</span></h1>
+                <h1><span style="color:rgb(31, 129, 241)">(1) 促進腸胃健康：</span></h1>
                 <br><h2>因為生食是完全沒有經過加工過的，能夠讓狗狗的腸胃完整吸收營養，也因為生肉的含水量較高，且能提供狗狗腸道中的微生物提供營養，讓腸胃中的益菌增加，有助於寵物排便。
                 </h2></br>
             </div>
