--- a/html/fresh.html
+++ b/html/fresh.html
@@ -40,7 +40,7 @@
                 <h1><span style="color:rgb(31, 129, 241)">總結：</span></h1>
                 <h2>&emsp;&emsp;鮮食除了同樣是吃原型食物，沒有添加物疑慮之外，<span style="color:rgb(31, 129, 241)">最大的好處便是可以根據狗狗不同品種、不同時期、不同的健康狀態去調整食材運用。</span></h2></br>
                 <h3>&emsp;&emsp;但狗狗可能會對部分食材產生過敏反應，這就需仰賴飼主在一開始嘗試鮮食時，每次也少量做測試。<br>&emsp;&emsp;另外，有體重過重問題的狗狗，也可以透過鮮食來控制狗狗飲食與體重：你家毛孩太胖嗎？！幫狗狗減肥就靠這幾招！</br></h3>
-                <br><h4><span style="color:rgb(31, 129, 241)">延伸學習：<a href="https://www.youtube.com/watch?v=CTTM4_8Rb6w"target="_blank">鮮食自己做</a>></span></h4></br>
+                <br><h4><span style="color:rgb(31, 129, 241)">延伸學習：<a href="https://www.youtube.com/watch?v=CTTM4_8Rb6w"target="_blank">鮮食自己做</a></span></h4></br>
             </div>
             <div class="button"><a href="/html/page2.html"style="text-decoration:none;">BACK</a></div>
             </div>
