--- a/html/med.html
+++ b/html/med.html
@@ -54,34 +54,32 @@
                     <div class="ret"><div class="fword">醫療</div></div>
                 </div> 
             </div>
-            <div class="KW1" id="KW1">
-                <div class="box1">
-                    <div class="meat">
+                <div class="box1"id="KW1">
+                    <div class="med1">
                         <div class="circle1">
                             <div class="photo1"><a href="/html/med1.html"><img src="/1x/4.png"></a></div>
                         </div>
                         <div class="word1"><br>狗狗為何要結紮?</br>結紮對身體更好?</div>
                     </div>
-                    <div class="fresh">
+                    <div class="med2">
                         <div class="circle2">
                             <div class="photo2"><a href="/html/med2.html"><img src="/1x/5.png"></a></div>
                         </div>
                         <div class="word2"><br>毛孩洗了澡</br>還是臭呼呼?</div>
                     </div>
-                    <div class="food">
+                    <div class="med3">
                         <div class="circle3">
                             <div class="photo3"><a href="/html/med3.html"><img src="/1x/6.png"></a></div>
                         </div>
                         <div class="word3"><br>狗狗常見</br>皮膚病種類</div>
                     </div>
-                    <div class="snack">
+                    <div class="med4">
                         <div class="circle4">
                             <div class="photo4"><a href="/html/med4.html"><img src="/1x/8.png"></a></div>
                         </div>
                         <div class="word4"><br>狗狗緊急CPR</br>關鍵時機?</div>
                     </div>
                 </div>
-            </div>
         </div>
     </body>
     </div>
