--- a/html/med/med.html
+++ b/html/med/med.html
@@ -4,7 +4,7 @@
         <meta charest="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <title>浪與不浪</title>
-        <link href="/css/med.css" rel="stylesheet" type="text/css">
+        <link href="/css/med/med.css" rel="stylesheet" type="text/css">
         <a href="/html/page2.html"></a>
         <script src="https://kit.fontawesome.com/26192343f6.js" crossorigin="anonymous"></script>
         <link href="java">
@@ -22,7 +22,7 @@
                         <ul class="test">
                             <li><a href="/html/page2.html">狗狗飲食</a></li>
                             <li><a href="/html/money.html">狗狗開銷</a></li>
-                            <li><a href="/html/med.html">狗狗醫療</a></li>
+                            <li><a href="/html/med/med.html">狗狗醫療</a></li>
                             <li><a href="/html/mutal.html">狗狗心理</a></li>
                             <li><a href="/html/train.html">狗狗訓練</a></li>
                             <li><a href="/html/fun.html">狗狗遊憩</a></li>
@@ -57,25 +57,25 @@
                 <div class="box1"id="KW1">
                     <div class="med1">
                         <div class="circle1">
-                            <div class="photo1"><a href="/html/med1.html"><img src="/1x/4.png"></a></div>
+                            <div class="photo1"><a href="/html/med/med1.html"><img src="/1x/4.png"></a></div>
                         </div>
                         <div class="word1"><br>狗狗為何要結紮?</br>結紮對身體更好?</div>
                     </div>
                     <div class="med2">
                         <div class="circle2">
-                            <div class="photo2"><a href="/html/med2.html"><img src="/1x/5.png"></a></div>
+                            <div class="photo2"><a href="/html/med/med2.html"><img src="/1x/5.png"></a></div>
                         </div>
                         <div class="word2"><br>毛孩洗了澡</br>還是臭呼呼?</div>
                     </div>
                     <div class="med3">
                         <div class="circle3">
-                            <div class="photo3"><a href="/html/med3.html"><img src="/1x/6.png"></a></div>
+                            <div class="photo3"><a href="/html/med/med3.html"><img src="/1x/6.png"></a></div>
                         </div>
                         <div class="word3"><br>狗狗常見</br>皮膚病種類</div>
                     </div>
                     <div class="med4">
                         <div class="circle4">
-                            <div class="photo4"><a href="/html/med4.html"><img src="/1x/8.png"></a></div>
+                            <div class="photo4"><a href="/html/med/med4.html"><img src="/1x/8.png"></a></div>
                         </div>
                         <div class="word4"><br>狗狗緊急CPR</br>關鍵時機?</div>
                     </div>
