--- a/html/med/med2.html
+++ b/html/med/med2.html
@@ -4,7 +4,7 @@
         <meta charest="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <title>浪與不浪</title>
-        <link href="/css/med2.css" rel="stylesheet" type="text/css">
+        <link href="/css/med/med2.css" rel="stylesheet" type="text/css">
         <script src="https://kit.fontawesome.com/26192343f6.js" crossorigin="anonymous"></script>
         <link href="java">
     </head>
