--- a/html/page2.html
+++ b/html/page2.html
@@ -22,7 +22,7 @@
                         <ul class="test">
                             <li><a href="#KW1">狗狗飲食</a></li>
                             <li><a href="/html/money.html">狗狗開銷</a></li>
-                            <li><a href="/html/med.html">狗狗醫療</a></li>
+                            <li><a href="/html/med/med.html">狗狗醫療</a></li>
                             <li><a href="/html/mutal.html">狗狗心理</a></li>
                             <li><a href="/html/train.html">狗狗訓練</a></li>
                             <li><a href="/html/fun.html">狗狗遊憩</a></li>
