--- a/html/mind/mind.html
+++ b/html/mind/mind.html
@@ -4,8 +4,8 @@
         <meta charest="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <title>浪與不浪</title>
-        <link href="/css/mutal.css" rel="stylesheet" type="text/css">
-        <a href="/html/page2.html"></a>
+        <link href="/css/mind/mind.css" rel="stylesheet" type="text/css">
+        <a href="/html/mind/mind.html"></a>
         <script src="https://kit.fontawesome.com/26192343f6.js" crossorigin="anonymous"></script>
         <link href="java">
     </head>
@@ -23,7 +23,7 @@
                             <li><a href="/html/page2.html">狗狗飲食</a></li>
                             <li><a href="/html/money.html">狗狗開銷</a></li>
                             <li><a href="/html/med/med.html">狗狗醫療</a></li>
-                            <li><a href="/html/mutal.html">狗狗心理</a></li>
+                            <li><a href="/html/mind/mind.html">狗狗心理</a></li>
                             <li><a href="/html/train.html">狗狗訓練</a></li>
                             <li><a href="/html/fun.html">狗狗遊憩</a></li>
                         </ul>
@@ -51,7 +51,7 @@
                     <div class="icon1">
                         <i class="fas fa-clinic-medical fa-4x"></i>
                     </div>
-                    <div class="ret"><div class="fword">醫療</div></div>
+                    <div class="ret"><div class="fword">心理</div></div>
                 </div> 
             </div>
                 <div class="box1"id="KW1">
@@ -59,31 +59,31 @@
                         <div class="circle1">
                             <div class="photo1"><a href="/html/med1.html"><img src="/1x/14.png"></a></div>
                         </div>
-                        <div class="word1"><br>狗狗為何要結紮?</br>結紮對身體更好?</div>
+                        <div class="word1"><br>狗真的改不了吃屎？</br>吃屎原因及改善方法</div>
                     </div>
                     <div class="med2">
                         <div class="circle2">
                             <div class="photo2"><a href="/html/med2.html"><img src="/1x/13.png"></a></div>
                         </div>
-                        <div class="word2"><br>毛孩洗了澡</br>還是臭呼呼?</div>
+                        <div class="word2">什麼是分離焦慮症?？</div>
                     </div>
                     <div class="med3">
                         <div class="circle3">
                             <div class="photo3"><a href="/html/med3.html"><img src="/1x/15.png"></a></div>
                         </div>
-                        <div class="word3"><br>狗狗常見</br>皮膚病種類</div>
+                        <div class="word3"><br>狗狗求救的行為跡象！</br></div>
                     </div>
                     <div class="med4">
                         <div class="circle4">
                             <div class="photo4"><a href="/html/med4.html"><img src="/1x/12.png"></a></div>
                         </div>
-                        <div class="word4"><br>狗狗緊急CPR</br>關鍵時機?</div>
+                        <div class="word4"><br>狗狗為何護食？</br>護食怎麼辦？</div>
                     </div>
                     <div class="med5">
                         <div class="circle5">
                             <div class="photo4"><a href="/html/med4.html"><img src="/1x/11.png"></a></div>
                         </div>
-                        <div class="word5"><br>狗狗緊急CPR</br>關鍵時機?</div>
+                        <div class="word5"><br>為甚麼狗狗一直舔我？</br></div>
                     </div>
                 </div>
         </div>
