--- a/html/money.html
+++ b/html/money.html
@@ -23,7 +23,7 @@
                             <li><a href="/html/page2.html">狗狗飲食</a></li>
                             <li><a href="/html/money.html">狗狗開銷</a></li>
                             <li><a href="/html/med/med.html">狗狗醫療</a></li>
-                            <li><a href="/html/mutal.html">狗狗心理</a></li>
+                            <li><a href="/html/mind/mind.html">狗狗心理</a></li>
                             <li><a href="/html/train.html">狗狗訓練</a></li>
                             <li><a href="/html/fun.html">狗狗遊憩</a></li>
                         </ul>
