--- a/html/mind/mind.html
+++ b/html/mind/mind.html
@@ -49,7 +49,10 @@
                 <div class="circle">
                     <div class="circleTest"></div>
                     <div class="icon1">
-                        <i class="fas fa-clinic-medical fa-4x"></i>
+                        <i class="far fa-comment-alt fa-4x"></i>
+                    </div>
+                    <div class="icon2">
+                        <i class="far fa-heart fa-2x"></i>
                     </div>
                     <div class="ret"><div class="fword">心理</div></div>
                 </div> 
