--- a/html/mind/mind.html
+++ b/html/mind/mind.html
@@ -69,7 +69,7 @@
                             <div class="circle2">
                                 <div class="photo2"><a href="/html/mind/mind2.html"><img src="/1x/13.png"></a></div>
                             </div>
-                            <div class="word2">什麼是分離焦慮症?？</div>
+                            <div class="word2">什麼是分離焦慮症？</div>
                         </div>
                         <div class="med3">
                             <div class="circle3">
