--- a/html/med/med2.html
+++ b/html/med/med2.html
@@ -30,7 +30,7 @@
                 <h1>四、皮膚</span></h1>
                 <br><h2>飼主除了要定期的使用<span style="color:rgb(31, 129, 241)">寵物專用洗毛產品</span>洗澡以外，日常生活<span style="color:rgb(31, 129, 241)">保持乾燥、常常刷毛</span>也是不錯的方法。因為狗狗也不能太常洗澡，以免促進油脂分泌更旺盛，<span style="color:rgb(255, 61, 61)">大約維持1個禮拜到1個月一次的頻率即可</span>，若夏天天氣熱容易發出體味，洗澡的頻率可以比冬天高一些。</h2></br>
             </div>
-            <div class="button"><a href="/html/med.html"style="text-decoration:none;">BACK</a></div>
+            <div class="button"><a href="/html/med/med.html"style="text-decoration:none;">BACK</a></div>
             </div>
         </div>
     </body>
