--- a/html/med/med3.html
+++ b/html/med/med3.html
@@ -26,7 +26,7 @@
                 <h1><span style="color:rgb(31, 129, 241)">食物過敏引發</span></h1>
                 <br><h2>狗狗發生食物過敏的機率很小，盡量<span style="color:rgb(31, 129, 241)">避免蛋、奶及小麥</span>等過敏性食品就可以預防。但平常同樣可透過觀察，得知狗狗有沒有對某種食物出現過敏。</br><br>簡單判斷方式：<span style="color:rgb(255, 61, 61)">即給狗狗吃完飼料或鮮食後，觀察是否經常在嘴角周圍、臉部抓得特別厲害</span>。</br></h2></br>    
             </div>
-            <div class="button"><a href="/html/med.html"style="text-decoration:none;">BACK</a></div>
+            <div class="button"><a href="/html/med/med.html"style="text-decoration:none;">BACK</a></div>
             </div>
         </div>
     </body>
