--- a/html/med/med1.html
+++ b/html/med/med1.html
@@ -15,7 +15,7 @@
             <div class="video">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/suj-ssL4r10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="button"><a href="/html/med.html"style="text-decoration:none;">BACK</a></div>
+            <div class="button"><a href="/html/med/med.html"style="text-decoration:none;">BACK</a></div>
             </div>
         </div>
     </body>
