--- a/html/med/med4.html
+++ b/html/med/med4.html
@@ -12,7 +12,7 @@
         <div class="article">
             <div class="content">
                 還沒用
-            <div class="button"><a href="/html/med.html"style="text-decoration:none;">BACK</a></div>
+            <div class="button"><a href="/html/med/med.html"style="text-decoration:none;">BACK</a></div>
             </div>
         </div>
     </body>
