--- a/html/med/med.html
+++ b/html/med/med.html
@@ -33,7 +33,7 @@
                 </div>
             </div> 
         </nav>
-        <div class="top"><img src="/logo1.png"></div>
+        <div class="top"><a href="/index.html"><img src="/logo1.png"></a></div>
         <script>
             function openNav(){
                 document.getElementById("menu").style.width = "100%";
