--- a/html/med/med4.html
+++ b/html/med/med4.html
@@ -12,28 +12,33 @@
         <div class="article">
             <div class="money-title" >
                 <div class="Q">
-                    <div class="photo5"><img src="/1x/Q.png"></div>
+                    <div class="photo5"><img src="/1x/8.png"width="190px"height="200px"></div>
                     <div class="line"></div>
                 </div>
                 <div class="ret2">
-                    <div class="mword">狗狗的開銷？</div>
+                    <div class="mword">狗狗緊急CPR關鍵時機？</div>
                 </div>
             </div>
             <div class="content">
-                <h1><br>章結三：</br><br>狗狗常見皮膚病種類，預防方法不可不知</br></br></h1>
-                <br><h2>-常見皮膚病原因</h2></br>
+                <h1><br><span style="color:rgb(31, 129, 241)">『黃金4分鐘』</span></br></h1>
+                <div class="picture">
+                    <img src="/1x/cpr.jpg">
+                </div>
                 <div class="part1">
-                    <h1><span style="color:rgb(31, 129, 241)">換季氣候影響</span></h1>
-                    <br><h2>換季時，不但會有換毛情形，還會附帶狗狗皮膚紅疹、過敏等問題，更容易因潮濕悶熱而引起皮膚病。所以，這段期間建議頻繁地幫狗狗的毛髮進行梳理，並透過梳毛動作觀察狗狗的皮膚狀況。</br><br>延伸閱讀：<a href="https://www.rocktail.com.tw/blog/view/139"target="_blank">換季如何改善狗狗皮膚「癢癢之苦」？</a></br></h2>
+                    <br><h2>毛孩突然休克、昏迷不醒，甚至停止心跳呼吸，除了可選擇送醫之外，毛父母還能選擇立即幫狗狗做急救術，或許得救的機率會提高一些，時間跟人類一樣都是『黃金4分鐘』，除此之外，<span style="color:rgb(31, 129, 241)">持續施行CPR急救20分鐘內，毛孩心肺功能回復的機率很大</span>！</br></h2>
                 </div>
                 <div class="part2">
-                    <h1><span style="color:rgb(31, 129, 241)">外在環境因素</span></h1>
-                    <br><h2>環境當中的塵螨、灰塵、黴菌或花粉，都可能造成狗狗皮膚過敏等反應。</br>
-                        <br>因此，請注意狗狗常常躺臥的地方須<span style="color:rgb(255, 61, 61)">保持乾燥，經常清洗接觸性的用品</span>，可以減少引發皮膚過敏。</h2></br>
+                    <h1><span style="color:rgb(11, 7, 252)">CPR急救影片解說</span></h1>
+                    <br><h2>CPR急救適用的時機和原則，即是發現狗狗可能因中暑休克、車禍、溺水等意外，導致沒有了心跳、呼吸才可施行的急救措施。</br>
+                        <br><span style="color:rgb(11, 7, 252)">★「毛孩CPR急救術」口訣</span>：
+                        <br>喚醒狗狗、檢查脈搏/呼吸、排除異物、人工呼吸、胸外按壓、立即送醫。</br>
+                        以下將使用新北市政府動物保護防疫處的CPR急救影片的示範做詳細說明，請各位聰明伶俐地的家長們好好學習起來吧！</h2></br>
                 </div>
                 <div class="part3">
-                    <h1><span style="color:rgb(31, 129, 241)">食物過敏引發</span></h1>
-                    <br><h2>狗狗發生食物過敏的機率很小，盡量<span style="color:rgb(31, 129, 241)">避免蛋、奶及小麥</span>等過敏性食品就可以預防。但平常同樣可透過觀察，得知狗狗有沒有對某種食物出現過敏。</br><br>簡單判斷方式：<span style="color:rgb(255, 61, 61)">即給狗狗吃完飼料或鮮食後，觀察是否經常在嘴角周圍、臉部抓得特別厲害</span>。</br></h2></br>    
+                    <div class="photo1"><img src="/1x/photo1.png"></div>
+                    <div class="word1">
+                        <h1>施行CPR時，將狗狗側身平放，左側朝外。</h1>
+                    </div>
                 </div>
                 <div class="button"><a href="/html/med/med.html"style="text-decoration:none;">BACK</a></div>
                 </div>
