--- a/html/mind/mind3.html
+++ b/html/mind/mind3.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="part2">
                     <br><h1><span style="color:rgb(31, 129, 241)">2、舔咬自己的身體</span></h1></br>
-                    <br><h2><br>狗狗不斷舔咬自己的爪子、尾巴或四肢等都是異常的求救跡象，表示毛小孩可能正在經歷皮膚過敏問題。例如皮膚發紅或發炎、耳朵發炎等，在這些情況之下，牠們都會透過重複地舔咬動作來緩解不適。</br><br>延伸閱讀：<a href="https://www.rocktail.com.tw/blog/view/113"target="_blank">狗狗一直咬尾巴怎麼辦？從6種狀況找出原因</a></br></h2></br>
+                    <h2><br>狗狗不斷舔咬自己的爪子、尾巴或四肢等都是異常的求救跡象，表示毛小孩可能正在經歷皮膚過敏問題。例如皮膚發紅或發炎、耳朵發炎等，在這些情況之下，牠們都會透過重複地舔咬動作來緩解不適。</br><br>延伸閱讀：<a href="https://www.rocktail.com.tw/blog/view/113"target="_blank">狗狗一直咬尾巴怎麼辦？從6種狀況找出原因</a></br></h2>
                 </div>
                 <div class="part3">
                     <h1><span style="color:rgb(31, 129, 241)">3、發出悲嗚的聲音</span></h1>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="part7">
                     <br><h1><span style="color:rgb(31, 129, 241)">7、身體一直發抖</span></h1></br>
-                    <br><h2><br>通常狗狗出現身體發抖的行為，常見原因可能是狗焦慮症，其中包括分離焦慮、鞭炮噪音或交通工具發出的聲音所致，另外家庭改變因素如搬家、多了新成員等也會影響狗狗的情緒。建議最好從多方面去觀察狗狗一直發抖的原因，找出讓牠們獲得身心平靜的最佳方式，例如在窗戶邊框貼上隔音棉條降低噪音。</br><br>此外，多帶毛小孩從事運動和娛樂活動也有助於緩解焦慮，但前提要確保狗狗不是因為疾病疼痛而引起的顫抖。</br><br>延伸閱讀：<a href="https://www.rocktail.com.tw/blog/view/64" target="_blank">狗狗害怕煙火、鞭炮、雷聲怎麼辦?</a></br></h2></br>    
+                    <h2><br>通常狗狗出現身體發抖的行為，常見原因可能是狗焦慮症，其中包括分離焦慮、鞭炮噪音或交通工具發出的聲音所致，另外家庭改變因素如搬家、多了新成員等也會影響狗狗的情緒。建議最好從多方面去觀察狗狗一直發抖的原因，找出讓牠們獲得身心平靜的最佳方式，例如在窗戶邊框貼上隔音棉條降低噪音。</br><br>此外，多帶毛小孩從事運動和娛樂活動也有助於緩解焦慮，但前提要確保狗狗不是因為疾病疼痛而引起的顫抖。</br><br>延伸閱讀：<a href="https://www.rocktail.com.tw/blog/view/64" target="_blank">狗狗害怕煙火、鞭炮、雷聲怎麼辦?</a></br></h2>    
                 </div>
                 <div class="part8">
                     <br><h1><span style="color:rgb(31, 129, 241)">8、便溺習慣改變</span></h1></br>
