--- a/html/med/med4.html
+++ b/html/med/med4.html
@@ -40,6 +40,57 @@
                         <h1>施行CPR時，將狗狗側身平放，左側朝外。</h1>
                     </div>
                 </div>
+                <div class="part4">
+                    <div class="photo2"><img src="/1x/cpr2.png"></div>
+                    <div class="word2">
+                        <h1>檢查脈搏：將中指、食指一起按壓「腳踝下方或後腿內側」等脈搏位置，檢查有無脈搏的現象。</h1>
+                    </div>
+                </div>
+                <div class="part5">
+                    <div class="photo3"><img src="/1x/cpr3.png"></div>
+                    <div class="word3">
+                        <h1>檢查呼吸：基本上毛孩不會自主腹部呼吸，所以當中暑、中毒、呼吸道塞住的時候，呼吸會非常異常，產生異常的聲音、顯得費力，甚至舌頭或口腔黏膜變色。</h1>
+                    </div>
+                </div>
+                <div class="part6">
+                    <div class="photo4"><img src="/1x/cpr4.png"></div>
+                    <div class="word4">
+                        <h1>檢查呼吸狀態後，接著把狗狗的頸部伸直，讓牠的前肘盡量張開，好讓胸腔擴展開來。</h1>
+                    </div>
+                </div>
+                <div class="part7">
+                    <div class="photo5"><img src="/1x/cpr5.png"></div>
+                    <div class="word5">
+                        <h1>排除異物：為了維持呼吸道通暢，確保無異物塞住呼吸道，才能繼續進行CPR急救術（人工呼吸和胸外按壓）。</h1>
+                    </div>
+                </div>
+                <div class="part8">
+                    <div class="photo6"><img src="/1x/cpr6.png"></div>
+                    <div class="word6">
+                        <h1>人工呼吸：幫狗狗進行人工呼吸的方式，是「以口就鼻」實行人工呼吸，呼氣時，必須用雙手把狗狗的雙顎（嘴巴）緊合起來，然後把你的嘴緊貼著狗狗的鼻頭，再對著鼻孔吹氣，這樣才有辦法讓空氣進入肺部。</h1>
+                    </div>
+                </div>
+                <div class="part9">
+                    <div class="photo7"><img src="/1x/cpr7.png"></div>
+                    <div class="word7">
+                        <h1>以「一次吹氣1～2次，每次吹氣1～2秒」為一個循環，同時觀察狗狗的胸胸有沒有微微脹起或起伏，再者需要搭配胸外按壓 7 次，持續到狗狗恢復自主呼吸及心跳為主。請勿過度進行口鼻吹氣，否則可能導致狗狗引發「爆肺」的問題。</h1>
+                    </div>
+                </div>
+                <div class="part10">
+                    <div class="photo8"><img src="/1x/cpr8.png">
+                        <div class="photo88">
+                            <div class="photo8-1">
+                                <img src="/1x/cpr8-1.jpg">
+                            </div>
+                            <div class="photo8-2">
+                                <img src="/1x/cpr8-2.jpg">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="word8">
+                        <h1>胸外按壓：狗狗的前手肘碰到其胸口的位置，也是狗狗的心臟位置。進行胸外心臟按壓時，請把力量盡量集中施壓在心臟位置（施壓力道約狗狗側躺時身軀厚度的1/3深）。</h1>
+                    </div>
+                </div>
                 <div class="button"><a href="/html/med/med.html"style="text-decoration:none;">BACK</a></div>
                 </div>
         </div>
