--- a/html/med/med4.html
+++ b/html/med/med4.html
@@ -91,6 +91,18 @@
                         <h1>胸外按壓：狗狗的前手肘碰到其胸口的位置，也是狗狗的心臟位置。進行胸外心臟按壓時，請把力量盡量集中施壓在心臟位置（施壓力道約狗狗側躺時身軀厚度的1/3深）。</h1>
                     </div>
                 </div>
+                <div class="part11">
+                    <div class="photo9"><img src="/1x/cpr9.png"></div>
+                    <div class="word9">
+                        <h1>每一分鐘施行兩次CPR循環，這樣才能夠有其急救的作用。請謹記1次CPR循環是指：【往鼻孔吹氣1次、按壓胸部7次】，持續CPR循環20分鐘，一分鐘胸外按壓約80下。</h1>
+                    </div>
+                </div>
+                <div class="part12">
+                    <div class="photo10"><img src="/1x/cpr10.png"></div>
+                    <div class="word10">
+                        <h1>立即送醫：施行CPR過程中，必須密切觀察狗狗的心跳或脈搏有無恢復，若已成功回復心跳，就要立刻直接送往醫院。</h1>
+                    </div>
+                </div>
                 <div class="button"><a href="/html/med/med.html"style="text-decoration:none;">BACK</a></div>
                 </div>
         </div>
