--- a/html/med/med4.html
+++ b/html/med/med4.html
@@ -103,6 +103,10 @@
                         <h1>立即送醫：施行CPR過程中，必須密切觀察狗狗的心跳或脈搏有無恢復，若已成功回復心跳，就要立刻直接送往醫院。</h1>
                     </div>
                 </div>
+                <div class="part13">
+                        <h1><br><span style="color:rgb(36, 170, 54)">完整的CPR示範影片</span>：<a href="https://fb.watch/1yrMlkeo93/"target="_blank">CPR急救影片</a></br></h1>
+                        <h2><br>最後，必須特別提醒大家，以上施行CPR的犬隻是以中大型犬為例，若自家的狗狗是五公斤以下的小型犬隻，切記胸外按壓只要用四根指頭做按壓，其他步驟和原則不變。不論毛孩休克、失去意識的原因是什麼，毛父母們及早學會CPR（心肺復甦術），才能在觀察到毛孩有異常狀況時，儘快給予毛孩有效的急救，當然，平日對狗狗的細心照顧以及觀察其健康狀態，也是對牠們最基本的責任喔！</br><br>（以上資訊及圖片出處：<a href="https://www.facebook.com/watch/?ref=saved&v=702762000592582">新北市政府動物保護防疫處</a>和<a href="https://www.hk01.com/%E5%AF%B5%E7%89%A9/1615/%E5%AF%B5%E7%89%A9%E6%80%A5%E6%95%91-%E5%85%88%E4%BD%9Cabc%E6%AA%A2%E6%9F%A5-%E5%BF%83%E8%82%BA%E5%BE%A9%E7%94%A6%E6%B3%95%E5%8B%BF%E4%BA%82%E8%A9%A6">香港01媒體</a>）</br></h2>
+                </div>
                 <div class="button"><a href="/html/med/med.html"style="text-decoration:none;">BACK</a></div>
                 </div>
         </div>
