--- a/html/mind/mind.html
+++ b/html/mind/mind.html
@@ -61,33 +61,31 @@
                     <div class="box1">
                         <div class="med1">
                             <div class="circle1">
-                                <div class="photo1"><a href="/html/mind/mind1.html"><img src="/1x/14.png"></a></div>
+                                <div class="photo1"><a href="/html/mind/mind1.html"><img src="/1x/14.png"width="210px"height="210px"></a></div>
                             </div>
                             <div class="word1"><br>狗真的改不了吃屎？</br>吃屎原因及改善方法</div>
                         </div>
                         <div class="med2">
                             <div class="circle2">
-                                <div class="photo2"><a href="/html/mind/mind2.html"><img src="/1x/13.png"></a></div>
+                                <div class="photo2"><a href="/html/mind/mind2.html"><img src="/1x/13.png"width="210px"height="210px"></a></div>
                             </div>
                             <div class="word2">什麼是分離焦慮症？</div>
                         </div>
                         <div class="med3">
                             <div class="circle3">
-                                <div class="photo3"><a href="/html/mind/mind3.html"><img src="/1x/15.png"></a></div>
+                                <div class="photo3"><a href="/html/mind/mind3.html"><img src="/1x/15.png"width="210px"height="210px"></a></div>
                             </div>
                             <div class="word3"><br>狗狗求救的行為跡象！</br></div>
                         </div>
-                    </div>
-                    <div class="box2">
                         <div class="med4">
                             <div class="circle4">
-                                <div class="photo4"><a href="/html/mind/mind4.html"><img src="/1x/12.png"></a></div>
+                                <div class="photo4"><a href="/html/mind/mind4.html"><img src="/1x/12.png"width="210px"height="210px"></a></div>
                             </div>
                             <div class="word4"><br>狗狗為何護食？</br>護食怎麼辦？</div>
                         </div>
                         <div class="med5">
                             <div class="circle5">
-                                <div class="photo4"><a href="/html/mind/mind5.html"><img src="/1x/11.png"></a></div>
+                                <div class="photo4"><a href="/html/mind/mind5.html"><img src="/1x/11.png"width="210px"height="210px"></a></div>
                             </div>
                             <div class="word5"><br>為甚麼狗狗一直舔我？</br></div>
                         </div>
