--- a/html/train/train.html
+++ b/html/train/train.html
@@ -4,7 +4,7 @@
         <meta charest="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <title>浪與不浪</title>
-        <link href="/css/mind/mind.css" rel="stylesheet" type="text/css">
+        <link href="/css/train/train.css" rel="stylesheet" type="text/css">
         <a href="/html/page2.html"></a>
         <script src="https://kit.fontawesome.com/26192343f6.js" crossorigin="anonymous"></script>
         <link href="java">
