--- a/html/page2.html
+++ b/html/page2.html
@@ -24,8 +24,8 @@
                             <li><a href="/html/money.html">狗狗開銷</a></li>
                             <li><a href="/html/med/med.html">狗狗醫療</a></li>
                             <li><a href="/html/mind/mind.html">狗狗心理</a></li>
-                            <li><a href="/html/train.html">狗狗訓練</a></li>
-                            <li><a href="/html/fun.html">狗狗遊憩</a></li>
+                            <li><a href="/html/train/train.html">狗狗訓練</a></li>
+                            <li><a href="/html/fun/fun.html">狗狗遊憩</a></li>
                         </ul>
                     </li>
                     <li><a href="#about">關於我們</a></li>
