--- a/html/train/train.html
+++ b/html/train/train.html
@@ -61,31 +61,31 @@
                     <div class="box1">
                         <div class="med1">
                             <div class="circle1">
-                                <div class="photo1"><a href="/html/mind/mind1.html"><img src="/1x/111.png"width="210px"height="210px"></a></div>
+                                <div class="photo1"><a href="/html/train/train1.html"><img src="/1x/111.png"width="210px"height="210px"></a></div>
                             </div>
                             <div class="word1"><br>最多新手飼養</br>需要的狗狗訓練</div>
                         </div>
                         <div class="med2">
                             <div class="circle2">
-                                <div class="photo2"><a href="/html/mind/mind2.html"><img src="/1x/222.png"width="210px"height="210px"></a></div>
+                                <div class="photo2"><a href="/html/train/train2.html"><img src="/1x/222.png"width="210px"height="210px"></a></div>
                             </div>
                             <div class="word2"><br>狗狗超愛搞破壞？</br>如何讓狗狗秒變乖？</div>
                         </div>
                         <div class="med3">
                             <div class="circle3">
-                                <div class="photo3"><a href="/html/mind/mind3.html"><img src="/1x/333.png"width="210px"height="210px"></a></div>
+                                <div class="photo3"><a href="/html/train/train3.html"><img src="/1x/333.png"width="210px"height="210px"></a></div>
                             </div>
                             <div class="word3"><br>狗狗社會化</br></div>
                         </div>
                         <div class="med4">
                             <div class="circle4">
-                                <div class="photo4"><a href="/html/mind/mind4.html"><img src="/1x/444.png"width="210px"height="210px"></a></div>
+                                <div class="photo4"><a href="/html/train/train4.html"><img src="/1x/444.png"width="210px"height="210px"></a></div>
                             </div>
                             <div class="word4"><br>訓練狗狗主人最常犯</br>的五個NG行為！</div>
                         </div>
                         <div class="med5">
                             <div class="circle5">
-                                <div class="photo4"><a href="/html/mind/mind5.html"><img src="/1x/555.png"width="210px"height="210px"></a></div>
+                                <div class="photo4"><a href="/html/train/train5.html"><img src="/1x/555.png"width="210px"height="210px"></a></div>
                             </div>
                             <div class="word5"><br>NO暴衝！</br>狗狗散步全攻略</div>
                         </div>
