--- a/html/train/train1.html
+++ b/html/train/train1.html
@@ -83,7 +83,7 @@
                     <br><h1>5、諮詢專業的訓練師</h1></br>
                     <br><h2>若家裡的毛孩實在是無法訓練，甚至不斷地出現攻擊、脫序的行為，你根本沒法矯正那樣偏激的狀況時，建議尋求專業訓練師的協助。他們能夠幫你盡可能找出狗狗咬人的原因，並用最專業、最正確的方式來矯正不良的行爲。</br><br>另外，國外資料顯示，遭受狗狗襲擊及咬傷的人群多半為弱小的孩童！因爲小孩體型較弱小，對狗狗來說沒什麽威嚇感，因而成了被攻擊的對象。特別是當孩童與狗狗相互凝視時，會使狗狗感受到挑釁進而出現攻擊。因此，專家都建議別粗心把狗狗和嬰兒獨處放一塊，以防具有攻擊習性的狗狗引發攻擊。</br><br>延伸閱讀：<a href="https://www.rocktail.com.tw/blog/view/181"target="_blank">【狗狗行為】5個方法訓練狗狗不撲向陌生人、狗狗亂吃地上東西？3招訓練狗不亂吃的方法</a></br></h2></br>    
                 </div>
-                <div class="button"><a href="/html/mind/mind.html"style="text-decoration:none;">BACK</a></div>
+                <div class="button"><a href="/html/train/train.html"style="text-decoration:none;">BACK</a></div>
                 </div>
         </div>
     </body>
