--- a/html/train/train2.html
+++ b/html/train/train2.html
@@ -24,64 +24,59 @@
                     <h1>狗狗為何愛搞破壞？</h1>
                 </div>
                 <div class="part2">
-                    <br><h1>訓練狗狗前的心理建設</h1></br>
-                    <br><h2>許多家長們都期望透過訓練狗狗的方式，進而達到一些看似對飼主好，卻實質培養了狗狗良好習慣的目的。 狗狗的家長們還是要<span style="color:rgb(31, 129, 241)">付出足夠的時間與耐心</span>，那麼，狗狗自然而然也會跟著你學習更多，也能與你培養起默契、聽懂更多指令。<br>延伸閱讀： <a href="https://www.rocktail.com.tw/blog/view/70">幼犬訓練何時開始？把握3~6個月時期</a></br></h2></br>
+                    <br><h1>1、天性好奇心</h1></br>
+                    <br><h2>幼犬到了長牙和換牙的階段，牠們會藉由咬東西舒緩牙齦的不適感，再加上毛孩們天生好奇心很強，只要家裡增添了新東西，狗狗絕對會想辦法去弄清楚那是啥東西，用鼻子聞一聞、牙齒咬一咬，對於有興趣的物品甚至可能會把它整個大拆解呢！</br></h2></br>
                 </div>
                 <div class="part3">
-                    <h1>訓練狗狗坐下 Sit Down!</h1>
-                    <h2><br>進行訓練狗狗坐下的任務之前，<span style="color:rgb(31, 129, 241)">需要找到一個安靜、不受外在影響的地方</span>，並徹底執行以下幾個技巧來訓練狗狗。</h2>    
+                    <h1>2、習慣性啃咬</h1>
+                    <h2><br>狗狗的搞破壞行為大部分是習慣性動作，啃咬一次二次後，漸漸地就會在那個地方做記號，每當獨處無聊或不安時就會去咬一咬，像是一種自我安撫的方式。</h2>    
                 </div>
                 <div class="part4">
-                    <br><h1>1、挑對訓練的時間點</h1></br>
-                    <br><h2>狗狗正在睡覺、玩耍或吃飯時，如果突然叫住狗狗要牠乖乖聽話，通常狗狗只會當耳邊風，甚至可能跟你賭氣反抗。所以，記得訓練狗狗的時間點，<span style="color:rgb(255, 66, 66)">最好在狗狗沉穩的狀態下</span>，以及不受干擾的環境下進行。</br><br>＊小提醒：建議也可以挑狗狗無聊時執行，讓牠當作是一種互動遊戲很不錯，訓練起來還能事半功倍。</br></h2></br>    
+                    <br><h1>3、精力發洩不夠</h1></br>
+                    <br><h2>若是長時間待在家中的寵物，除了整天沒人陪伴外，更是缺乏運動和活動，精力太過旺盛的牠們，這時候就會透過啃咬物品來消耗消耗自己的體力。</br></h2></br>    
                 </div>
                 <div class="part5">
-                    <br><h1>2、訓練狗狗的實際步驟</h1></br>
-                    <br><h2>把準備好的零食放進口袋內，別讓毛孩看到食物，否則這場局會沒頭也沒尾。然後，<span style="color:rgb(31, 129, 241)">用一手扶住狗狗的前胸，另一手將狗狗的屁股往下施壓</span>，同時說出指令「坐下sit down」。當狗狗聽話坐下時，<span style="color:rgb(31, 129, 241)">立刻在5秒內獎勵零食一粒</span>，並搭配不同的語調和口令做訓練，還能順便培養兩人之間的默契。</br></h2></br>    
+                    <br><h1>4、獨自在家感到焦慮</h1></br>
+                    <br><h2>若狗狗獨自在家時，經常會破壞家裡的物品，則可能是分離焦慮的症狀。由於狗狗是個群聚動物，如果長時間沒人陪牠們在家的話，狗狗就容易感到無聊和不安，藉此報復性地抒發自己的情緒。</br></h2></br>    
                 </div>
                 <div class="part6">
-                    <br><h1>3、早晚各一次，每次15分鐘</h1></br>   
+                    <br><h1>5、尋求家人們的關注</h1></br> 
+                    <h2><br>如果毛狗狗的關注度太低，則可能會導致狗狗採取破壞性的行為，以此來引起你的關注。牠們知道「搞破壞、搗蛋」的時候，你一定會起身來阻止牠們，哪怕是教訓或斥責的互動，對狗狗來說都算是一種回應。</br></h2>  
                 </div>
                 <div class="part7">
-                    <h1><br>4、重複訓練次數，加強熟練</br><br>通常狗狗經過約七天的訓練，基本上已經完全掌握坐下的指令，接著不能半途而廢後，<span style="color:rgb(31, 129, 241)">需要定期、頻繁地做加強訓練</span>。 當愈來愈熟練之後，就能再給予其他高難度點的訓練例如翻滾、旋轉等動作。</br></h1>
+                    <h1><br>正確的矯正方法</br></h1>
                 </div>
                 <div class="part8">
-                    <br><h1>訓練狗狗定點大小便 Pee Pee! Poo Poo!</h1></br>
-                    <div class="video">
-                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/uVujyxF2RSY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                    <br><h2>飼養在家中的狗狗最需要訓練的技能就是「固定如廁」，那麼就不必擔心狗狗隨處亂尿尿，最重要的是能保持環境的清潔、減少尿漬的異味。然而，訓練狗狗定點大小便的成功要訣，<span style="color:rgb(31, 129, 241)">在於詳細地掌握毛孩大小便的時間點</span>。</h2></br>    
+                    <br><h1><span style="color:rgb(31, 129, 241)">1、適當的戶外運動</span></h1></br>
+                    <br><h2>戶外運動可以幫助毛孩消耗過剩的能量，鍛鍊身體肌肉外，藉由外出散步也能讓牠們呼吸一下新鮮空氣，順便釋放些壓力，外出散步的時間長短不重要，頻繁地帶牠們去放放電才是重點。此外，還能避免狗狗的社會化不足，幫助牠們培養良好的社交習性，這樣才不會每每見到陌生人或其他狗狗時，容易出現跋扈或緊張的狀態。</h2></br>    
                 </div>
                 <div class="part9">
-                    <br><h1>1、在室內指定的地方</h1></br>
-                    <br><h2>找到方便清潔的空間（例如廁所），並在地板上鋪滿報紙或尿布墊。 當狗狗剛好在某一區塊內想尿尿時<span style="color:rgb(31, 129, 241)">（出現嗅一嗅、轉一轉的行為），就順勢把報紙或尿布墊拿掉</span>。之後幾次都依照同樣的方式重複訓練，直到只放一片尿布墊時，狗狗會自動固定在上面尿尿為止就算成功了！</h2></br>    
+                    <br><h1><span style="color:rgb(31, 129, 241)">2、執行環境管理</span></h1></br>
+                    <br><h2>由於狗狗獨自在家搞破壞的機率很高，所以切實地進行環境管理很重要，比如對毛孩有危險的插座、剪刀等要盡可能收好，重要的物品也最好把它放在狗狗抓不到的地方。再來，如果狗狗習慣愛啃咬物品，擺放可給狗狗磨牙的玩具或潔牙骨，轉移牠們的注意力，避免無聊時或獨處時又開始亂咬東西。</h2></br>    
                 </div>
                 <div class="part10">
-                    <br><h1>2、在室外習慣的定點</h1></br>
-                    <br><h2>如果狗狗平時外出散步時，就能讓毛孩<span style="color:rgb(31, 129, 241)">習慣在某個時間點、地點讓狗狗大小便</span>，只是遇到冬天或下雨天時，減少狗狗外出的頻率，對牠們而言卻不是件開心的事情，且有些狗狗可能因為<span style="color:rgb(31, 129, 241)">獨處害怕、緊張或生病之類的關係</span>，以至於無法依照習慣的方式去大小便，這時請不要責罵，請給狗狗幾天的時間好好學習！</h2></br>    
+                    <br><h1><span style="color:rgb(31, 129, 241)">3、獎勵良好的行為</span></h1></br>
+                    <br><h2>平時看到狗狗安穩地休息，或者表現良好的時候，記得多口頭誇獎或零食獎勵牠們，讓毛孩瞭解只要自己夠沉穩、不搗蛋，那麼就能得到獎賞。</h2></br>    
                 </div>
                 <div class="part11">
-                    <br><h1>訓練狗狗不咬人 Stop！No！</h1></br>
-                    <br><h2>狗狗的攻擊行為和攻擊對象，往往出於天生獵性及某些特殊原因，必須追究其可能原因，才能夠確實防範狗狗出現咬人的不良行為。 除了諮詢專業訓練師的協助外，日常生活中也可透過不同的方式進行訓練，引導凶狠、愛咬人的狗狗徹底地停止這樣的行為。</h2></br>    
+                    <br><h1><span style="color:rgb(31, 129, 241)">4、室內的互動遊戲</span></h1></br>
+                    <br><h2>狗狗的玩具並不是丟給牠玩就行，我們需要透過跟狗狗玩玩具、拉扯等互動式遊戲，讓毛孩知道只要玩具到了牠手頭上，就能跟我們進行歡樂的互動和接觸，久而久之，狗狗就會懂得拿玩具玩耍而不是咬臭襪子。</h2></br>    
                 </div>
                 <div class="part12">
-                    <br><h1>1、負增強訓練</h1></br>
-                    <br><h2>若是家裡的幼犬常出現咬人的習慣，別以為小乳牙沒有什麽殺傷力，放任牠繼續亂咬亂破破而不加以矯正，到了成犬後可能會變本加厲。 因此，當飼主看到幼犬在咬人的同時，<span style="color:rgb(255, 66, 66)">必須加以制止同時用嚴肅的語氣說：「No！不行！停止！</span>」，直接讓狗狗意識到這是錯誤的行為，也了解到咬人的行爲會令飼主不開心。</h2></br>    
+                    <br><h1><span style="color:rgb(31, 129, 241)">5、益智玩具分散注意力</span></h1></br>
+                    <br><h2>白天狗狗獨自在家的時候，可以放些益智類的玩具分散牠們的注意力、消耗體力與釋放壓力，尤其對年紀大的毛孩來說，益智遊戲可以幫助刺激和活絡腦部。</h2></br>    
                 </div>
                 <div class="part13">
-                    <br><h1>2、社會化訓練</h1></br>
-                    <br><h2>社會化訓練必須在<span style="color:rgb(31, 129, 241)">幼犬出生後三個月內</span>開始執行，才會有最高的成功率。<span style="color:rgb(31, 129, 241)">每經過社會化訓練的狗狗會比較獨立、溫馴</span>，也能更融入與陌生人、其他動物的交流，自然較不可能發狠攻擊人。</h2></br>    
+                    <br><h1><br>無效的管教方式</br><br><span style="color:rgb(255, 66, 66)">ＮＯ！狠狠教訓一下！</span></br></h1></br>
+                    <br><h2>如果沒有太多時間陪伴狗狗或帶牠們去運動，絕對不要在毛孩搞破壞時，就嚴厲地教訓牠們，這麼做只會讓情況變本加厲。</h2></br>    
                 </div>
                 <div class="part14">
-                    <br><h1>3、明確規矩和指令</h1></br>
-                    <br><h2>有時狗狗<span style="color:rgb(31, 129, 241)">只是無聊發慌、想咬東西來紓壓解悶</span>，這時候，飼主可以給予狗狗專用的咬具。<span style="color:rgb(31, 129, 241)">利用紓壓益智的耐咬玩具轉移注意力</span>，久而久之習慣去咬玩具後，就比較不會無故地出現咬人的動作。</h2></br>    
+                    <br><h1><br><span style="color:rgb(255, 66, 66)">ＮＯ！大聲跟牠講道理！</span></br></h1></br>
+                    <br><h2>長篇大道理對牠們來說，就如迴向的唸經文在播放而已，對於矯正行為沒任何幫助，倒不如拿起玩具跟狗狗較勁一番，順便增進彼此的感情。</h2></br>    
                 </div>
                 <div class="part15">
-                    <br><h1>4、給狗狗啃咬的玩具</h1></br>
-                </div>
-                <div class="part16">
-                    <br><h1>5、諮詢專業的訓練師</h1></br>
-                    <br><h2>若家裡的毛孩實在是無法訓練，甚至不斷地出現攻擊、脫序的行為，你根本沒法矯正那樣偏激的狀況時，建議尋求專業訓練師的協助。他們能夠幫你盡可能找出狗狗咬人的原因，並用最專業、最正確的方式來矯正不良的行爲。</br><br>另外，國外資料顯示，遭受狗狗襲擊及咬傷的人群多半為弱小的孩童！因爲小孩體型較弱小，對狗狗來說沒什麽威嚇感，因而成了被攻擊的對象。特別是當孩童與狗狗相互凝視時，會使狗狗感受到挑釁進而出現攻擊。因此，專家都建議別粗心把狗狗和嬰兒獨處放一塊，以防具有攻擊習性的狗狗引發攻擊。</br><br>延伸閱讀：<a href="https://www.rocktail.com.tw/blog/view/181"target="_blank">【狗狗行為】5個方法訓練狗狗不撲向陌生人、狗狗亂吃地上東西？3招訓練狗不亂吃的方法</a></br></h2></br>    
+                    <br><h1><br><span style="color:rgb(255, 66, 66)">ＮＯ！乾脆把牠關起來！</span></br></h1></br>
+                    <br><h2>限制狗狗自由活動或許能暫時達到控制的目地，但每次處罰牠們都採用關緊閉的方式，其實容易讓狗狗產生強烈的不安感，特別是平時沒有進行籠內訓練的毛孩，若把籠子作為一種處罰，反而更會增加狗狗的焦慮情緒，從而引起其他脫序的行為，例如舔腳趾、吠叫等。</h2></br>
                 </div>
                 <div class="button"><a href="/html/train/train.html"style="text-decoration:none;">BACK</a></div>
                 </div>
