--- a/html/food.html
+++ b/html/food.html
@@ -29,7 +29,7 @@
                 <h1><span style="color:rgb(31, 129, 241)">狗飼料品牌如何挑選？參考WDJ榜單吧！</span></h1>
                 <br><h2>什麼是WDJ榜單？</h2></br>
                 <h3><br>WDJ榜單，其實是來自於美國專業狗狗雜誌<span style="color:rgb(31, 129, 241)">《Whole Dog Journal》</span>，每年針對狗狗飼料做出評價，從原物料端、配方、製程等資訊，進行專業的評分。</br><br> 由於WDJ拒絕任何形式的商業廣告，以優質有價值的內容吸引訂閱戶，豎立了狗界權威的形象，因此在WDJ榜單方面，可信度很高。
-                </br><br>相當於狗界每年一度的米其林指南，對於消費者來說，入選的廠商都是可以放心購買的品牌，如果對於飼料的品牌猶豫不決，不妨參考看看。</br><div class="WDJ"><a href="https://www.whole-dog-journal.com/"><img src="/1x/WDJ.jpg"></a></div><br>WDJ是權威狗狗雜誌，每年都會根據嚴格標準評選出適合狗狗的飼料推薦。<br><span style="color:rgb(77, 74, 74)">圖片來源：WDJ官網</span></br></br></h3>
+                </br><br>相當於狗界每年一度的米其林指南，對於消費者來說，入選的廠商都是可以放心購買的品牌，如果對於飼料的品牌猶豫不決，不妨參考看看。</br><div class="WDJ"><a href="https://www.whole-dog-journal.com/"target="_blank"><img src="/1x/WDJ.jpg"></a></div><br>WDJ是權威狗狗雜誌，每年都會根據嚴格標準評選出適合狗狗的飼料推薦。<br><span style="color:rgb(77, 74, 74)">圖片來源：WDJ官網</span></br></br></h3>
             </div>
             <div class="part5">
                 <h1>WDJ榜單的評分依據：</h1>
